--- a/app/views/portfolios/index.html.erb
+++ b/app/views/portfolios/index.html.erb
@@ -5,6 +5,6 @@
     <p><%= portfolio_item.title %> </p>
     <p><%= portfolio_item.subtitle %> </p>
     <p> body : <%= portfolio_item.body %> </p>
-    <p> <%= image_tag portfolio_item.thumb_image %> </p>
+    <p> <%= image_tag portfolio_item.thumb_image if portfolio_item.thumb_image %> </p>
   </div>
 <% end %>
