implemented edit and update

--- a/app/views/portfolios/edit.html.erb
+++ b/app/views/portfolios/edit.html.erb
@@ -1,4 +1,4 @@
-<h1>New Portfolio</h1>
+<h1>Edit Portfolio</h1>
 
 <%= form_for(@portfolio_item) do |form| %>
 
@@ -13,7 +13,7 @@
   </div>
 
   <div class="field">
-    <%= form.label :body ,"Portfolio body" %>
+    <%= form.label :body %>
     <%= form.text_area :body %>
   </div>
 
