--- a/app/views/blogs/index.html.erb
+++ b/app/views/blogs/index.html.erb
@@ -1,7 +1,6 @@
 <p id="notice"><%= notice %></p>
 
 <h1>Blogs</h1>
-<%= @portfolio.inspect %>
 <table>
   <thead>
     <tr>
@@ -19,6 +18,7 @@
         <td><%= link_to 'Show', blog %></td>
         <td><%= link_to 'Edit', edit_blog_path(blog) %></td>
         <td><%= link_to 'Destroy', blog, method: :delete, data: { confirm: 'Are you sure?' } %></td>
+        <td><%= link_to blog.status, toggle_status_blog_path(blog) %></td>
       </tr>
     <% end %>
   </tbody>
